Fixed unit tests for GCP and IBM